--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Club365</title>
+  <title>CLB365</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>
@@ -193,7 +193,7 @@
     <!-- Profile Section -->
     <div class="profile-section">
       <div class="profile-logo"></div>
-      <h5>Club365</h5>
+      <h5>CLB365</h5>
       <button class="chat-btn">Continue to chat</button>
       
       <div class="download-link">
@@ -273,4 +273,5 @@
 
 </body>
 </html>
+
 
